--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,13 @@ minecraft {
         client {
             // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
             property 'forge.enabledGameTestNamespaces', mod_id
+	    environment "__NV_PRIME_RENDER_OFFLOAD", "1"
+	    environment "__GLX_VENDOR_LIBRARY_NAME", "nvidia"
+	    jvmArgs "-XX:+UnlockExperimentalVMOptions",
+            "-XX:G1NewSizePercent=20",
+            "-XX:G1ReservePercent=20",
+            "-XX:MaxGCPauseMillis=50",
+            "-XX:G1HeapRegionSize=16M"
         }
 
         server {
